# TetrisProyecto

./: CMakeLists.txt
res/: Sin título-1.psd
src/: gestorEntrada.cpp  gestorOpciones.cpp  main.cpp  pieza.cpp  tableroFondo.cpp
